Jenkins/jenkins-scenarios/scenario_04_k8s_commander/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-commander
  labels:
    name: k8s-commander
    app: k8s-commander
